fixed slight misalignment with specialties section

--- a/assets/css/specialties.css
+++ b/assets/css/specialties.css
@@ -1,4 +1,3 @@
-
 /* specialty section */
 
 #specialtiesSection {
@@ -107,6 +106,10 @@
 /* ! MEDIA QUERIES */
 
 @media only screen and (max-width: 1147px) {
+    /* specialty section */
+    #specialtiesSection {
+        height: auto;
+    }
     /* moon background image */
     #moonBg {
         bottom: 19rem;
